--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
-
-# Created by https://www.gitignore.io/api/c++
-# Edit at https://www.gitignore.io/?templates=c++
 ### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+
+.vscode/
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
